--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+    <body class="body-text">
+        <h1 class="name">Odin Recipes</h1>
+        <ul id>
             <li><a href="recipes/pancakes.html">Pancakes</a></li>
             <li><a href="recipes/egg.html">Egg in a hole</a></li>
             <li><a href="recipes/mac.html">Mac and Cheese</a></li>
