--- a/recipes/mac.html
+++ b/recipes/mac.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Mac and Cheese</title>
+        <link rel="stylesheet" href="../style.css" />
     </head>
     <body>
         <h1>Mac and Cheese</h1>
-        <img src="../img/mac.jpeg" alt="mac and cheese">
+        <img id="img" src="../img/mac.jpeg" alt="mac and cheese">
         <h2>Description</h2>
         <p>This mac and cheese recipe with a buttered bread cumb topping is creamy and comforting.
              It is easy to make the cheese sauce from scratch on your stovetop. You can serve
