--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Pancakes</title>
+        <link rel="stylesheet" href="../style.css" />
     </head>
     <body>
         <h1>Pankaces</h1>
-        <img src="../img/pancakes.jpeg" alt="pancakes">
+        <img id="img" src="../img/pancakes.jpeg" alt="pancakes">
         <h2>Description</h2>
         <p>Pancakes are easy to make and they can be eaten with fruits, jam or plain. It is an ideal meal when in a hurry.
             you can make them more nutritious by adding different reagents. For this recipe we will refer to a more common - simple dish.</p>
