--- a/recipes/egg.html
+++ b/recipes/egg.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Egg in a hole</title>
+        <link rel="stylesheet" href="../style.css" />
     </head>
     <body>
         <h1>Egg in a hole</h1>
-        <img src="../img/egg.jpg" alt="egg in a hole">
+        <img id="img" src="../img/egg.jpg" alt="egg in a hole">
         <h2>Description</h2>
         <p>Egg in a hole makes a delicious breakfast! A runny yolk egg cooked in 
             the center of a piece of toast and eaten with a fork is a great way to enjoy and egg in a slightly different way.</p>
