--- a/recipes/egg.html
+++ b/recipes/egg.html
@@ -5,28 +5,32 @@
         <title>Egg in a hole</title>
         <link rel="stylesheet" href="../style.css" />
     </head>
-    <body>
-        <h1>Egg in a hole</h1>
-        <img id="img" src="../img/egg.jpg" alt="egg in a hole">
-        <h2>Description</h2>
-        <p>Egg in a hole makes a delicious breakfast! A runny yolk egg cooked in 
-            the center of a piece of toast and eaten with a fork is a great way to enjoy and egg in a slightly different way.</p>
-        <h2>Ingredients:</h2>
-        <ul>
-            <li> <strong>Bacon grease:</strong> 1.5 tablespoon of bacon grease for cooking</li>
-            <li> <strong>Bread:</strong> A slice of bread as a base.</li>
-            <li> <strong>Salt</strong> and <strong>Ground black pepper:</strong> These will add taste.</li>
-            <li> <strong>Egg:</strong> The main ingredient.</li>
-        </ul>
-        <h2>Steps:</h2>
-        <ol>
-            <li>Melt bacon grease in a nonstick pan over low heat.</li>
-            <li>Cut a hole in the center of bread slice and place it in the hot skillet for 2 minutes.</li>
-            <li>Flip the bread and crack an egg into the hole.</li>
-            <li>Season with salt and pepper.</li>
-            <li>Continue cooking until the egg is cooked and mostly firm.</li>
-            <li>Flip again and cook for a single minute.</li>
-            <li>Serve the meal.</li>
-        </ol>
+    <body class="body">
+        <div class="first">
+            <img id="img" src="../img/egg.jpg" alt="egg in a hole">
+            <div class="second">
+                <h1 class="recname">Egg in a hole</h1>
+                <h2>Description</h2>
+                <p>Egg in a hole makes a delicious breakfast! A runny yolk egg cooked in 
+                    the center of a piece of toast and eaten with a fork is a great way to enjoy and egg in a slightly different way.</p>
+                <h2>Ingredients:</h2>
+                <ul>
+                    <li> <strong>Bacon grease:</strong> 1.5 tablespoon of bacon grease for cooking</li>
+                    <li> <strong>Bread:</strong> A slice of bread as a base.</li>
+                    <li> <strong>Salt</strong> and <strong>Ground black pepper:</strong> These will add taste.</li>
+                    <li> <strong>Egg:</strong> The main ingredient.</li>
+                </ul>
+                <h2>Steps:</h2>
+                <ol>
+                    <li>Melt bacon grease in a nonstick pan over low heat.</li>
+                    <li>Cut a hole in the center of bread slice and place it in the hot skillet for 2 minutes.</li>
+                    <li>Flip the bread and crack an egg into the hole.</li>
+                    <li>Season with salt and pepper.</li>
+                    <li>Continue cooking until the egg is cooked and mostly firm.</li>
+                    <li>Flip again and cook for a single minute.</li>
+                    <li>Serve the meal.</li>
+                </ol>
+            </div>
+        </div>
     </body>
 </html>
