--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
         <title>Odin Recipes</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body class="body-text">
-        <h1 class="name">Odin Recipes</h1>
-        <ul id>
-            <li><a href="recipes/pancakes.html">Pancakes</a></li>
-            <li><a href="recipes/egg.html">Egg in a hole</a></li>
-            <li><a href="recipes/mac.html">Mac and Cheese</a></li>
-        </ul>
+    <body class="body">
+        <div class="first">
+            <img class="frontpic" src="./img/food.jpg" alt="food items">
+            <h1 class="name">Odin Recipes</h1>
+            <ul class="list">
+                <li><a href="recipes/pancakes.html">Pancakes</a></li>
+                <li><a href="recipes/egg.html">Egg in a hole</a></li>
+                <li><a href="recipes/mac.html">Mac and Cheese</a></li>
+            </ul>
+        </div>
     </body>
 </html>
