--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -5,28 +5,32 @@
         <title>Pancakes</title>
         <link rel="stylesheet" href="../style.css" />
     </head>
-    <body>
-        <h1>Pankaces</h1>
+    <body class="body">
+        <div class="first">
         <img id="img" src="../img/pancakes.jpeg" alt="pancakes">
-        <h2>Description</h2>
-        <p>Pancakes are easy to make and they can be eaten with fruits, jam or plain. It is an ideal meal when in a hurry.
-            you can make them more nutritious by adding different reagents. For this recipe we will refer to a more common - simple dish.</p>
-        <h2>Ingredients:</h2>
-        <ul>
-            <li> <strong>Flour:</strong> This quick pancake recipe starts with a cup of all-purpose flour.</li>
-            <li> <strong>Sugar:</strong> You will need two tablespoons of white sugar.</li>
-            <li> <strong>Baking powder:</strong> Baking powder acts as a leavening agent, ensuring perfectly fluffy pancakes.</li>
-            <li> <strong>Salt:</strong> Salt enhances the overall flavor of the pancakes, but it will not make the pancakes taste salty.</li>
-            <li> <strong>Milk</strong> and <strong>oil:</strong> These will add moisture and flavor to the pancakes.</li>
-            <li> <strong>Egg:</strong> A beaten egg lends more moisture and helps bind the batter together.</li>
-        </ul>
-        <h2>Steps:</h2>
-        <ol>
-            <li>Combine the dry ingredients.</li>
-            <li>Add the wet ingredients and mix.</li>
-            <li>Pour the batter onto the pan.</li>
-            <li>Cook until bubbles form, flip, and cook on the other side.</li>
-            <li>Serve the meal.</li>
-        </ol>
+            <div class="second">
+                <h1 class="recname">Pankaces</h1>
+                <h2>Description</h2>
+                <p>Pancakes are easy to make and they can be eaten with fruits, jam or plain. It is an ideal meal when in a hurry.
+                    you can make them more nutritious by adding different reagents. For this recipe we will refer to a more common - simple dish.</p>
+                <h2>Ingredients:</h2>
+                <ul>
+                    <li> <strong>Flour:</strong> This quick pancake recipe starts with a cup of all-purpose flour.</li>
+                    <li> <strong>Sugar:</strong> You will need two tablespoons of white sugar.</li>
+                    <li> <strong>Baking powder:</strong> Baking powder acts as a leavening agent, ensuring perfectly fluffy pancakes.</li>
+                    <li> <strong>Salt:</strong> Salt enhances the overall flavor of the pancakes, but it will not make the pancakes taste salty.</li>
+                    <li> <strong>Milk</strong> and <strong>oil:</strong> These will add moisture and flavor to the pancakes.</li>
+                    <li> <strong>Egg:</strong> A beaten egg lends more moisture and helps bind the batter together.</li>
+                </ul>
+                <h2>Steps:</h2>
+                <ol>
+                    <li>Combine the dry ingredients.</li>
+                    <li>Add the wet ingredients and mix.</li>
+                    <li>Pour the batter onto the pan.</li>
+                    <li>Cook until bubbles form, flip, and cook on the other side.</li>
+                    <li>Serve the meal.</li>
+                </ol>
+            </div>
+        </div>
     </body>
 </html>
